# DzhaniFleet

./: README.md  pyproject.toml
.github/workflows/: format-and-lint.yml
backend/: .env.template  main.py  requirements.txt
backend/src/api/: deps.py
backend/src/api/v1/: routes.py
backend/src/api/v1/endpoints/: users.py
backend/src/core/: authentication.py  config.py  security.py
backend/src/crud/: user.py
backend/src/database/: session.py
backend/src/models/: base.py  categories.py  documents.py  enums.py  user.py  users.py  vehicles.py
backend/src/schemas/: user.py
backend/src/utils/: notifications.py  validators.py
scripts/: create_db.sql  empty_data_from_db.sql  fill_data_to_db.sql
